--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div> <!-- Контейнер для модального окна -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
